--- a/projects/user-app/src/app/pages/change-password/change-password.html
+++ b/projects/user-app/src/app/pages/change-password/change-password.html
@@ -4,7 +4,7 @@
   <mat-dialog-content>
     @if (isForced) {
       <p class="warn-text" style="color: var(--mat-sys-error); margin-bottom: 16px">
-        {{ t('change-password.change-password.CHANGE_PW.FORCED_MSG') }}
+        {{ t('change-password.CHANGE_PW.FORCED_MSG') }}
       </p>
     }
 
