--- a/projects/user-app/src/app/pages/login/login.html
+++ b/projects/user-app/src/app/pages/login/login.html
@@ -77,6 +77,11 @@
             <a routerLink="/register" class="register-link">
               {{ t('login_user.LOGIN.REGISTER_LINK') }}
             </a>
+            <div style="margin-top: 8px;">
+                <a routerLink="/forgot-password" class="register-link">
+                    {{ t('login_user.LOGIN.FORGOT_PASSWORD_LINK') }}
+                </a>
+            </div>
           </div>
         }
 
