--- a/projects/user-app/src/app/pages/dashboard/dashboard.html
+++ b/projects/user-app/src/app/pages/dashboard/dashboard.html
@@ -32,7 +32,7 @@
           <div class="no-event">
             <p>{{ t('dashboard.DASHBOARD.NO_UPCOMING') }}</p>
             <button mat-stroked-button color="primary" routerLink="/calendar">
-              {{ t('EVENT.CREATE_TITLE') }}
+              {{ t('dashboard.EVENT.CREATE_TITLE') }}
             </button>
           </div>
         }
