fix: docu styles

--- a/projects/user-app/src/styles.scss
+++ b/projects/user-app/src/styles.scss
@@ -1,5 +1,55 @@
 @use '@angular/material' as mat;
 
+/* --- local fonts --- */
+
+/* Roboto 300 */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: url('/assets/fonts/roboto-v50-latin-300.woff2') format('woff2');
+}
+/* Roboto 400 */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/assets/fonts/roboto-v50-latin-regular.woff2') format('woff2');
+}
+/* Roboto 500 */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  src: url('/assets/fonts/roboto-v50-latin-500.woff2') format('woff2');
+}
+
+/* Material Icons */
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/assets/fonts/MaterialIcons-Regular.woff2') format('woff2');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}
+
+/* --- local fonts --- */
+
 // 1. Theme Definitionen
 // ---------------------------------------------------------
 
